# partials

./: LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: advanced_demo.py  combination_demo.py  demo.py  image_to_audio.py
src/partials/: __init__.py  combination.py  dissonance.py  inharmonicity.py  morph.py  viz.py
tests/: __init__.py  test_combination.py  test_dissonance.py  test_inharmonicity.py  test_morph.py  test_viz.py
