[project]
name = "partials"
dynamic = ["version"]
description = "Psychoacoustic tools for working with the physical reality of sound — partial series, timbral dissonance, and inharmonic spectra"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/partials"]

[tool.hatch.version]
source = "vcs"